--- a/app/assets/stylesheets/services.css.scss
+++ b/app/assets/stylesheets/services.css.scss
@@ -1920,15 +1920,15 @@
 			}
 
 		.icon.style1 {
-			color: #00ffcc;
+			color: #FFF;
 		}
 
 		.icon.style2 {
-			color: #00f0ff;
+			color: #FFF;
 		}
 
 		.icon.style3 {
-			color: #76ddff;
+			color: #FFF;
 		}
 
 /* Image */
