--- a/app/views/frontpage/index.html.haml
+++ b/app/views/frontpage/index.html.haml
@@ -12,8 +12,8 @@
 %a{:name => "top#{@posts.first.id.to_s}"}       
 .full_width_post{:id => "top#{@posts.first.id.to_s}"}= render :partial => 'full_width_post', :locals => {:post => @posts.first }
     
+%div#acedia= render :partial => 'acedia'
 
-%div#tweet_front= render :partial => 'tweet'
 
 / %a{:name => "activities"}
 / #activity_front
@@ -34,20 +34,20 @@
   .columns.text-center{:"data-magellan-destination" => 'recent_posts'}
     - @posts[1..2].each do |post|
       .small-12.medium-12.large-6.columns.post_outer{:"data-equalizer-watch" => "outer"}= render :partial => 'image_top_post', :locals => {:post => post}
-
+%div#tweet_front= render :partial => 'tweet'
 
 - Cash.visible.where(:source => "blindness").where("image_width > 760").order(order: :desc).limit(1).each do |bp|
   #blindness_container.blindness_wrapper{:"data-magellan-destination" => "blindness"}= render :partial => 'blindness_image', :locals => {:post => bp}
 
-#bookmarks_front{:style => 'background-color: #F2F27C'}= render :partial => 'bookmark', :locals => {:link => Cash.where(:source => 'bookmarks').order('created_at DESC').limit(25) }
 
 #less_recent.row{:"data-equalizer" => "outer2", :"data-magellan-destination" => "less_recent"}
-  - @posts[3..4].each do |post|
-    .large-6.columns{:"data-equalizer-watch" => "outer2"}= render :partial => 'title_top_post', :locals => {:post => post}
+  - @posts[3..5].each do |post|
+    .large-4.columns{:"data-equalizer-watch" => "outer2"}= render :partial => 'title_top_post', :locals => {:post => post}
   .columns.text-center
     %h6= link_to 'Older posts', posts_path(:page => 2), class: [:button, :tiny]
 
 
+#bookmarks_front{:style => 'background-color: #F2F27C'}= render :partial => 'bookmark', :locals => {:link => Cash.where(:source => 'bookmarks').order('created_at DESC').limit(25) }
 #disclaimer
   .row
     .small-9.columns
