--- a/app/views/frontpage/_full_width_post.html.haml
+++ b/app/views/frontpage/_full_width_post.html.haml
@@ -43,9 +43,9 @@
 - unless post.videos.empty? && post.audiopodcasts.empty?
   = content_for :jquery do
     :plain
-      //if ((navigator.platform.indexOf("iPhone") == -1) && (navigator.platform.indexOf("iPad") == -1)) {
+      if ((navigator.platform.indexOf("iPhone") == -1) && (navigator.platform.indexOf("iPad") == -1)) {
         $('video,audio').mediaelementplayer({defaultVideoWidth: "100%", alwaysShowHours: true});        
-      //}
+      }
 /
 / - if post.photos.empty?
 /   .row
