--- a/app/assets/stylesheets/seriousintrospection.css.scss
+++ b/app/assets/stylesheets/seriousintrospection.css.scss
@@ -182,6 +182,19 @@ a.readmore-js-toggle {
   clear: both;
   margin: 0 auto;
   margin-bottom: 1rem;
+  img {
+    
+  }
+  .play {
+    background: url(/assets/play-button-overlay.png) center center no-repeat;
+    margin: 0;
+      height: 140px;
+      position: absolute;
+      z-index: 10;
+      display: inline-block;
+      width: 100%;
+      top: 25%;
+  }
 }
 
 .audiocontent {
