--- a/app/views/frontpage/si_front.html.haml
+++ b/app/views/frontpage/si_front.html.haml
@@ -1,13 +1,25 @@
 .post_container
+  .post
+    %h3 Next appearance:
+    = link_to 'Friday, 5 February at 18:00', 'http://www.madhousehelsinki.fi/events/avajaiset-cabaret-voltaire-100-v-dada-0'
+    %br/
+    Mad House Helsinki opening event / Suvilahti / free admission
+.post_container
   - @posts.each do |post|
     .post
       .row
         %h3= link_to post.title, post
         %h6= "posted " + post.created_at.strftime("%d %B %Y")
-      - unless post.videos.empty?
+      - if post.videos.empty?
+        - if post.image?
+          = image_tag post.image.url.gsub('development', 'production')
+      - else
         - post.videos.each do |video|
-          .videocontent
-            %video{src: video.url, controls: "true",  style: "width: 100%; height: 100%", height: "100%", width: "100%"}
+          = link_to '#' do
+            .videocontent[video]{rel: video.url}
+              = image_tag post.image.url.gsub('development', 'production')
+              .play &nbsp;
+              -# %video{src: video.url, controls: "true",  style: "width: 100%; height: 100%", height: "100%", width: "100%"}
       - unless post.audiopodcasts.empty?
         - post.audiopodcasts.each do |podcast|
           .audiocontent
@@ -17,4 +29,10 @@
         .text-justify.readmore.post_description
           = raw post.body
           
-          
+= content_for :jquery do
+  :plain
+    $('a .videocontent').click(function () {
+      $(this).children('.play').css('background-image', 'url(/assets/siloader.gif)');
+      $(this).html('<video autoplay controls="true" style="width: 100%; height: 100%" height="100%" width: "100%" src="' + $(this).attr('rel') + '"></video>');
+      return false;
+    });
