--- a/app/views/frontpage/si_front.html.haml
+++ b/app/views/frontpage/si_front.html.haml
@@ -1,7 +1,7 @@
 .post_container
   .post
-    %h3 Next appearance:
-    = link_to 'Friday, 5 February at 18:00', 'http://www.madhousehelsinki.fi/events/avajaiset-cabaret-voltaire-100-v-dada-0'
+    %h3 Next appearance: S02E01 - 
+    = link_to 'Wednesday, 10 February at 21:00', 'https://www.facebook.com/events/465898456936520/'
     %br/
     Mad House Helsinki opening event / Suvilahti / free admission
 .post_container
