manually hardcoded next show date

--- a/app/views/frontpage/si_front.html.haml
+++ b/app/views/frontpage/si_front.html.haml
@@ -1,9 +1,9 @@
 .post_container
   .post
-    %h3 Next appearance: S02E01 - 
+    %h3 Next appearance: 
     = link_to 'Wednesday, 10 February at 21:00', 'https://www.facebook.com/events/465898456936520/'
     %br/
-    Mad House Helsinki opening event / Suvilahti / free admission
+    S02E01 with Paola de Ramos, Helen Korpak, and Iina Esko / Ihana Baari, Suvilahti / free admission
 .post_container
   - @posts.each do |post|
     .post
