updated itunes feed

--- a/app/views/frontpage/si_front.html.haml
+++ b/app/views/frontpage/si_front.html.haml
@@ -1,9 +1,13 @@
 .post_container
   .post
     %h3 Next appearance: 
-    = link_to 'Wednesday, 10 February at 21:00', 'https://www.facebook.com/events/465898456936520/'
+    = link_to 'Wednesday, 24 February at 21:00', 'http://www.madhousehelsinki.fi/events/errevening'
     %br/
-    S02E01 with Paola de Ramos, Helen Korpak, and Iina Esko / Ihana Baari, Suvilahti / free admission
+    S02E02 with Juha Valkeapää, plus
+    = link_to '#ErrEvening', 'http://www.madhousehelsinki.fi/events/errevening' 
+    = "! / "
+    Ihana Baari, Suvilahti / free admission
+    
 .post_container
   - @posts.each do |post|
     .post
