remove tallinn from cv

--- a/app/views/layouts/cv.html.erb
+++ b/app/views/layouts/cv.html.erb
@@ -18,7 +18,7 @@ John W. Fail
 <br />
 <span style="font-size: 0.7em;" class="noprint">[ <%= link_to 'contact', '/contact' %> ]</span>
 <div class="print_only">
-<p>Helsinki / Tallinn</p><p>  john@ptarmigan.fi</p>
+<p>based in Helsinki, Finland</p><p>  john@ptarmigan.fi</p>
 
 	 </center>
 </div>
