--- a/app/views/frontpage/si_front.html.haml
+++ b/app/views/frontpage/si_front.html.haml
@@ -1,11 +1,9 @@
 .post_container
   .post
     %h3 Next appearance: 
-    = link_to 'Wednesday, 24 February at 21:00', 'http://www.madhousehelsinki.fi/events/errevening'
+    = link_to 'Wednesday, 2 March at 21:00', 'https://www.facebook.com/events/1748881928674021/'
     %br/
-    S02E02 with Juha Valkeapää, plus
-    = link_to '#ErrEvening', 'http://www.madhousehelsinki.fi/events/errevening' 
-    = "! / "
+    S02E03 with Martina Marti and Juuso Paaso! / 
     Ihana Baari, Suvilahti / free admission
     
 .post_container
