--- a/app/assets/stylesheets/seriousintrospection.css.scss
+++ b/app/assets/stylesheets/seriousintrospection.css.scss
@@ -86,7 +86,7 @@ a.readmore-js-toggle {
   }
   .post_container {
     background-color: #FFFFFF;
-    opacity: 0.9;
+//    opacity: 0.9;
     padding: 0.5rem 2rem;
     position: relative;
     padding-left: 0.9375rem;
