weekly itunes updat

--- a/app/views/frontpage/si_front.html.haml
+++ b/app/views/frontpage/si_front.html.haml
@@ -1,9 +1,9 @@
 .post_container
   .post
     %h3 Next appearance: 
-    = link_to 'Wednesday, 2 March at 21:00', 'https://www.facebook.com/events/1748881928674021/'
+    = link_to 'Wednesday, 16 March at 21:00', 'https://www.facebook.com/events/1662658430664721/'
     %br/
-    S02E03 with Martina Marti and Juuso Paaso! / 
+    S02E04 with Tuukka Asplund and Kira O'Reilly / 
     Ihana Baari, Suvilahti / free admission
     
 .post_container
