--- a/app/views/frontpage/si_front.html.haml
+++ b/app/views/frontpage/si_front.html.haml
@@ -1,9 +1,9 @@
 .post_container
   .post
     %h3 Next appearance: 
-    = link_to 'Wednesday, 16 March at 21:00', 'https://www.facebook.com/events/1662658430664721/'
+    = link_to 'Wednesday, 23 March at 21:00', 'https://www.facebook.com/events/1039698359436758/'
     %br/
-    S02E04 with Tuukka Asplund and Kira O'Reilly / 
+    S02E05 with 110%, Marek Pluciennik, and someone named Mirva / 
     Ihana Baari, Suvilahti / free admission
     
 .post_container
