--- a/app/views/frontpage/si_front.html.haml
+++ b/app/views/frontpage/si_front.html.haml
@@ -1,10 +1,10 @@
 .post_container
   .post
     %h3 Next appearance: 
-    = link_to 'Wednesday, 30 March at 21:00', 'https://www.facebook.com/events/966605786708918/'
+    = link_to '1-3 April', 'http://ihmefestival.fi'
     %br/
-    S02E05 with Paula Toppila, Hanna Tuulikki and Mirva / 
-    Ihana Baari, Suvilahti / free admission
+    SI @ IHME Päivät / 
+    Vanha Ylioppilastalo, Helsinki  / free admission
     
 .post_container
   - @posts.each do |post|
