--- a/app/views/frontpage/si_front.html.haml
+++ b/app/views/frontpage/si_front.html.haml
@@ -1,10 +1,10 @@
 .post_container
   .post
     %h3 Next appearance: 
-    = link_to '1-3 April', 'http://ihmefestival.fi'
+    = link_to '6 April at 21:00', 'https://www.facebook.com/events/1556673014663256/'
     %br/
-    SI @ IHME Päivät / 
-    Vanha Ylioppilastalo, Helsinki  / free admission
+    Season 2, episode 7 with Olaf Möller and Mari Keski-Korus / 
+    Ihana Baari, Suvilahti, Helsinki  / free admission
     
 .post_container
   - @posts.each do |post|
