--- a/app/views/frontpage/si_front.html.haml
+++ b/app/views/frontpage/si_front.html.haml
@@ -3,7 +3,7 @@
     %h3 Next appearance: 
     = link_to '6 April at 21:00', 'https://www.facebook.com/events/1556673014663256/'
     %br/
-    Season 2, episode 7 with Olaf Möller and Mari Keski-Korus / 
+    Season 2, episode 7 with Olaf Möller and Mari Keski-Korsu / 
     Ihana Baari, Suvilahti, Helsinki  / free admission
     
 .post_container
