new podcast feed

--- a/app/assets/stylesheets/icewhistle.css.scss
+++ b/app/assets/stylesheets/icewhistle.css.scss
@@ -263,6 +263,9 @@ main {
     margin-bottom: 18em;
     padding-bottom: 2rem;
     padding-top: 2.2em;
+    .post_banner {
+      text-align: center;
+    }
     &.posts {
       padding-top: 0;
     }
