--- a/app/assets/stylesheets/seriousintrospection.css.scss
+++ b/app/assets/stylesheets/seriousintrospection.css.scss
@@ -1,5 +1,7 @@
 /*
- *= require foundation
+
+ *= require foundation_and_overrides
+ *= require _settings
  *= require_self
  *= require mediaelement_rails
 */
