--- a/app/views/crumbles/index.html.haml
+++ b/app/views/crumbles/index.html.haml
@@ -1,7 +1,7 @@
 
 .row
   .small-3.columns
-    %h3 Crumbles
+    %h3 Archives
     %p  
       Viewing as list.
       = link_to 'View by date', by_date_crumbles_path  
