--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,7 +1,9 @@
 /*
- *= require foundation
+
  *= require_self
+
  *= require foundation_and_overrides
+ *= require _settings
  *= require icewhistle
  *= require mediaelement_rails
  */
