--- a/app/views/frontpage/index.html.haml
+++ b/app/views/frontpage/index.html.haml
@@ -1,65 +1,47 @@
-#magellan{:"data-magellan-expedition" => :fixed, :"data-options" => "destination_threshold:64;threshold:64;throttle_delay:50;"}
+%div{:"data-sticky-container" => ''}
+  .sticky#example{:'data-sticky'=> '', :'data-margin-top' => '0', style: 'width: 100%', :"data-margin-bottom" => 0}
+    %nav#magellan{:"data-magellan" =>  '', :'data-bar-offset' => 112}
+      %ul.horizontal.menu.expanded
+        %li.first= link_to @posts.first.title, "#top#{@posts.first.id.to_s}"
+        
+        %li= link_to 'Recent posts', "#recent_posts"
+        %li= link_to 'Blindness', '#blindness_container'
+        %li= link_to 'Less recent posts', '#less_recent'
+        %li= link_to 'Recently read', '#bookmarks_front'
 
-  %dl.sub-nav
-    %dd.first.active{:"data-magellan-arrival" => "top#{@posts.first.id.to_s}"}= link_to @posts.first.title, "#top#{@posts.first.id.to_s}"
-    -# %dd{:"data-magellan-arrival" => "activities"}= link_to 'Project news and events', "#activity_front"
-    %dd{:"data-magellan-arrival" => "recent_posts"}= link_to 'Recent posts', "#recent_posts"
-    %dd{:"data-magellan-arrival" => "blindness"}= link_to 'Blindness', '#blindness_container'
-    %dd{:"data-magellan-arrival" => "bookmarks_front"}= link_to 'Recently read', '#bookmarks_front'
-    %dd{:"data-magellan-arrival" => "less_recent"}= link_to 'Less recent posts', '#less_recent'
 
 
-%a{:name => "top#{@posts.first.id.to_s}"}       
+%section{id: "top#{@posts.first.id.to_s}", :"data-magellan-target" => "top#{@posts.first.id.to_s}"}       
 .full_width_post.text-center{:id => "top#{@posts.first.id.to_s}"}= render :partial => 'full_width_post', :locals => {:post => @posts.first }
     
 %div#acedia= render :partial => 'acedia'
 
 
-/ %a{:name => "activities"}
-/ #activity_front
-/   .row
-/     .columns.text-center
-/       %h2 Projects: news and events
-/     .activities_front
-/       - Cash.visible.where("source = 'pixelache' or source = 'ptarmigan'").order("cashes.order DESC").limit(6).each do |activity|
-/         = link_to activity.link_url, :target => :_blank do
-/           .small-4.columns.item= render :partial => 'activity_feed', :locals => {:activity => activity}
-/
-/
-/     / .small-4.columns.panel
-/     /   = render :partial => 'crumbles', :locals => {:crumbles => @crumbles}
-/     %div{:"data-magellan-destination" => 'activities'} &nbsp;
 
-#recent_posts.row{:"data-equalizer" => "outer"}
-  .columns.text-center{:"data-magellan-destination" => 'recent_posts'}
+
+%section#recent_posts.row{:"data-equalizer" => "outer", :"data-magellan-target" => "recent_posts"}
+  .columns.text-center
     - @posts[1..2].each do |post|
       .small-12.medium-12.large-6.columns.post_outer{:"data-equalizer-watch" => "outer"}= render :partial => 'image_top_post', :locals => {:post => post}
 %div#tweet_front= render :partial => 'tweet'
 
 - Cash.visible.where(:source => "blindness").where("image_width > 760").order(order: :desc).limit(1).each do |bp|
-  #blindness_container.blindness_wrapper{:"data-magellan-destination" => "blindness"}= render :partial => 'blindness_image', :locals => {:post => bp}
+  %section#blindness_container.blindness_wrapper{:"data-magellan-target" => "blindness_container"}= render :partial => 'blindness_image', :locals => {:post => bp}
 
 
-#less_recent.row{:"data-equalizer" => "outer2", :"data-magellan-destination" => "less_recent"}
+%section#less_recent.row{:"data-magellan-target" => "less_recent"}
   - @posts[3..5].each do |post|
     .large-4.columns{:"data-equalizer-watch" => "outer2"}= render :partial => 'title_top_post', :locals => {:post => post}
   .columns.text-center
     %h6= link_to 'Older posts', posts_path(:page => 2), class: [:button, :tiny]
 
 
-#bookmarks_front{:style => 'background-color: #F2F27C'}= render :partial => 'bookmark', :locals => {:link => Cash.where(:source => 'bookmarks').order('created_at DESC').limit(25) }
+#bookmarks_front{:style => 'background-color: #F2F27C', :"data-magellan-target" => "bookmarks_front"}= render :partial => 'bookmark', :locals => {:link => Cash.where(:source => 'bookmarks').order('created_at DESC').limit(25) }
 #disclaimer
   .row
     .small-9.columns
       %p Icewhistle.com is the website of John W. Fail since 2007. 
 
       %medium Content on icewhistle.com does not necessarily represent the viewpoints of Ptarmigan, Piknik Frequency aka Pixelache, or any other organisations. Contact via email link on site footer.
-= content_for :jquery do
-  :plain
 
-    $('#magellan a[href*=#]').on('click', function(event){     
-      
-        event.preventDefault();
-        $('html,body').animate({scrollTop:$(this.hash).offset().top - 70}, 500);
-    });
 
