--- a/app/views/frontpage/_tweet.html.haml
+++ b/app/views/frontpage/_tweet.html.haml
@@ -6,4 +6,4 @@
     %h6.subheading= raw twit.first
   .small-12.medium-3.columns.twitter_column.medium-text-right.small-text-left
     = link_to 'Follow @hyksos', 'http://twitter.com/hyksos', :class => "twitter-follow-button"
-    %script{:src => "http://platform.twitter.com/widgets.js", :type => "text/javascript"}
+    %script{:src => "https://platform.twitter.com/widgets.js", :type => "text/javascript"}
